--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
             <button num-data class="num-data">3</button>
             <button class="equals" onclick="equals()">=</button>
 
-            <button class="div-data">%</button>
+            <button class="div-data" onclick="save()"><img src="icons8-save-24.png"></button>
             <button class="num-data">0</button>
             <button id="decimal" class="num-data" onclick="decimal()">.</button>
         </div>
     </div>
+
+    <div id="save-display" class="save-display">0</div>
 </body>
 </html>
